--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -75,7 +75,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 100;
+    z-index: 999999;
     background-color: rgba(0, 0, 0, .7);
     display: flex;
     -webkit-overflow-scrolling: touch;
